sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value lim
		for(i<-0 to lim){
                            ^AlgBubbleSort2:10: error: not found: value lim
		lim=lim-1
                ^AlgBubbleSort2:11: error: not found: value lim
	}while(lim<0)
               ^